--- a/DungeonFarming/appsettings.json
+++ b/DungeonFarming/appsettings.json
@@ -12,6 +12,6 @@
   "DbConfig": {
     "Redis": "127.0.0.1",
     "AccountDb": "Server=127.0.0.1;user=root;Password=123qwe;Database=accountdb;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
-    "CharacterDb": "Server=127.0.0.1;user=root;Password=123qwe;Database=characterdb;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
+    "GameDb": "Server=127.0.0.1;user=root;Password=123qwe;Database=gamedb;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
   }
 }
