--- a/DungeonFarming/appsettings.Development.json
+++ b/DungeonFarming/appsettings.Development.json
@@ -13,5 +13,8 @@
     "Redis": "127.0.0.1:6379",
     "AccountDb": "Server=127.0.0.1;user=root;Password=123qwe;Database=accountdb;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;",
     "GameDb": "Server=127.0.0.1;user=root;Password=123qwe;Database=gamedb;Pooling=true;Min Pool Size=0;Max Pool Size=40;AllowUserVariables=True;"
+  },
+  "RedisHashKeys": {
+    "Notification": "notice"
   }
 }
