로그인 버전확인

--- a/DungeonFarming/appsettings.json
+++ b/DungeonFarming/appsettings.json
@@ -16,5 +16,9 @@
   },
   "RedisHashKeys": {
     "Notification": "notice"
+  },
+  "Versions": {
+    "Client": "1.0",
+    "MasterData" :  "1.0"
   }
 }
